--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
     </form>
     <p>Or have a look at these:</p>
     <ul>
-      <li><a href="/github://octocat/spoon-knife">github://octocat/spoon-knife</a><li>
+      <li><a href="/github://octocat/spoon-knife">github://octocat/spoon-knife</a></li>
     </ul>
   </body>
 </html>
