Adds push/pull from private registry; adds kubectl

--- a/client/launch.html
+++ b/client/launch.html
@@ -50,7 +50,7 @@
       }, false);
 
       eventSource.addEventListener('goto', function(event) {
-        window.location = 'http://' + window.location.hostname + ':' + event.data + '/';
+        window.location = event.data;
       }, false);
 
       eventSource.addEventListener('end', function(event) {
