--- a/client/launch.html
+++ b/client/launch.html
@@ -50,7 +50,13 @@
       }, false);
 
       eventSource.addEventListener('goto', function(event) {
-        window.location = event.data;
+        // Get the token
+        var token = event.data
+
+        var div = document.createElement('div');
+        div.className = 'goto';
+        div.innerHTML = '<a href="/session/' + token + '" target="_blank">Click here to open container</a>'
+        document.getElementsByTagName('body')[0].appendChild(div);
       }, false);
 
       eventSource.addEventListener('end', function(event) {
