Finishes off JWT based routing

--- a/client/launch.html
+++ b/client/launch.html
@@ -55,7 +55,7 @@
 
         var div = document.createElement('div');
         div.className = 'goto';
-        div.innerHTML = '<a href="/session/' + token + '" target="_blank">Click here to open container</a>'
+        div.innerHTML = '<a href="/~session/' + token + '" target="_blank">Click here to open container</a>'
         document.getElementsByTagName('body')[0].appendChild(div);
       }, false);
 
